--- a/style.css
+++ b/style.css
@@ -18,3 +18,12 @@ body{
     width: 100%;
     height: 228px;
 }
+.ingredients-card{
+    width: 400px;
+    border-radius: 10px;
+    background-image: linear-gradient(rgba(232, 232, 232, 0.2), rgba(232, 232, 232, 0.5));
+    margin: 0 auto;
+}
+.ingredients-card img{
+    height: 300px;
+}
